FEAT: add backtracking, beam search, and local search to explore solution space using heuristics

--- a/Laboratorio08/lab8.ipynb
+++ b/Laboratorio08/lab8.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,6 +190,264 @@
     "        for exam, day in exam_days:\n",
     "            print(f\"  - {exam}: {day}\")\n",
     "        print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Backtracking Search\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo de ejecución: 0.0010187625885009766 segundos\n",
+      "Solución: {'Exam1': 'Lunes', 'Exam2': 'Martes', 'Exam3': 'Miércoles', 'Exam4': 'Miércoles', 'Exam5': 'Lunes', 'Exam6': 'Martes', 'Exam7': 'Martes'}\n",
+      "Verificación: La solución cumple todas las restricciones.\n",
+      "Horarios de exámenes por estudiante:\n",
+      "Estudiante Rodri:\n",
+      "  - Exam1: Lunes\n",
+      "  - Exam2: Martes\n",
+      "  - Exam3: Miércoles\n",
+      "\n",
+      "Estudiante Andre:\n",
+      "  - Exam1: Lunes\n",
+      "  - Exam7: Martes\n",
+      "  - Exam4: Miércoles\n",
+      "\n",
+      "Estudiante Suarino:\n",
+      "  - Exam5: Lunes\n",
+      "  - Exam2: Martes\n",
+      "  - Exam4: Miércoles\n",
+      "\n",
+      "Estudiante Sergio:\n",
+      "  - Exam5: Lunes\n",
+      "  - Exam6: Martes\n",
+      "  - Exam3: Miércoles\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def backtracking_search(assignment={}):\n",
+    "    # Caso base: asignación completa\n",
+    "    if len(assignment) == len(exams):\n",
+    "        return assignment\n",
+    "\n",
+    "    # Seleccionar la siguiente variable (examen) sin asignar.\n",
+    "    unassigned = [exam for exam in exams if exam not in assignment]\n",
+    "    exam = unassigned[0]\n",
+    "\n",
+    "    for day in days:\n",
+    "        if is_consistent(assignment, exam, day):\n",
+    "            assignment[exam] = day\n",
+    "            result = backtracking_search(assignment)\n",
+    "            if result is not None:\n",
+    "                return result\n",
+    "            # Si no se encontró solución, se deshace la asignación.\n",
+    "            del assignment[exam]\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "start_bt = time.time()\n",
+    "solucion_bt = backtracking_search()\n",
+    "end_bt = time.time()\n",
+    "time_bt = end_bt - start_bt\n",
+    "\n",
+    "print(\"Tiempo de ejecución:\", time_bt, \"segundos\")\n",
+    "print(\"Solución:\", solucion_bt)\n",
+    "valido, mensaje = check_solution(solucion_bt)\n",
+    "print(\"Verificación:\", mensaje)\n",
+    "display_student_schedule(solucion_bt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Beam Search\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo de ejecución: 0.0009999275207519531 segundos\n",
+      "Solución: {'Exam1': 'Lunes', 'Exam2': 'Martes', 'Exam3': 'Miércoles', 'Exam4': 'Miércoles', 'Exam5': 'Lunes', 'Exam6': 'Martes', 'Exam7': 'Martes'}\n",
+      "Verificación: La solución cumple todas las restricciones.\n",
+      "Horarios de exámenes por estudiante:\n",
+      "Estudiante Rodri:\n",
+      "  - Exam1: Lunes\n",
+      "  - Exam2: Martes\n",
+      "  - Exam3: Miércoles\n",
+      "\n",
+      "Estudiante Andre:\n",
+      "  - Exam1: Lunes\n",
+      "  - Exam7: Martes\n",
+      "  - Exam4: Miércoles\n",
+      "\n",
+      "Estudiante Suarino:\n",
+      "  - Exam5: Lunes\n",
+      "  - Exam2: Martes\n",
+      "  - Exam4: Miércoles\n",
+      "\n",
+      "Estudiante Sergio:\n",
+      "  - Exam5: Lunes\n",
+      "  - Exam6: Martes\n",
+      "  - Exam3: Miércoles\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def beam_search(beam_width=3):\n",
+    "    # Estado inicial: asignación vacía\n",
+    "    beam = [{}]\n",
+    "\n",
+    "    while beam:\n",
+    "        new_beam = []\n",
+    "        for assignment in beam:\n",
+    "            # Si la asignación es completa y sin conflictos, se retorna la solución.\n",
+    "            if len(assignment) == len(exams) and count_conflicts(assignment) == 0:\n",
+    "                return assignment\n",
+    "\n",
+    "            # Seleccionar el siguiente examen a asignar.\n",
+    "            unassigned = [exam for exam in exams if exam not in assignment]\n",
+    "            if not unassigned:\n",
+    "                continue\n",
+    "            next_exam = unassigned[0]\n",
+    "            for day in days:\n",
+    "                new_assignment = assignment.copy()\n",
+    "                new_assignment[next_exam] = day\n",
+    "                # Se evalúa la heurística la cual es el número de conflictos.\n",
+    "                conflicts = count_conflicts(new_assignment)\n",
+    "                new_beam.append((conflicts, new_assignment))\n",
+    "\n",
+    "        # Se ordenan las asignaciones parciales por menor número de conflictos y se retienen las mejores.\n",
+    "        new_beam.sort(key=lambda x: x[0])\n",
+    "        beam = [assignment for conflicts, assignment in new_beam[:beam_width]]\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "start_beam = time.time()\n",
+    "solucion_beam = beam_search(beam_width=3)\n",
+    "end_beam = time.time()\n",
+    "time_beam = end_beam - start_beam\n",
+    "\n",
+    "print(\"Tiempo de ejecución:\", time_beam, \"segundos\")\n",
+    "print(\"Solución:\", solucion_beam)\n",
+    "valido, mensaje = check_solution(solucion_beam)\n",
+    "print(\"Verificación:\", mensaje)\n",
+    "display_student_schedule(solucion_beam)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Local Search\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo de ejecución: 0.003000974655151367 segundos\n",
+      "Solución: {'Exam1': 'Lunes', 'Exam2': 'Martes', 'Exam3': 'Miércoles', 'Exam4': 'Miércoles', 'Exam5': 'Lunes', 'Exam6': 'Martes', 'Exam7': 'Martes'}\n",
+      "Verificación: La solución cumple todas las restricciones.\n",
+      "Horarios de exámenes por estudiante:\n",
+      "Estudiante Rodri:\n",
+      "  - Exam1: Lunes\n",
+      "  - Exam2: Martes\n",
+      "  - Exam3: Miércoles\n",
+      "\n",
+      "Estudiante Andre:\n",
+      "  - Exam1: Lunes\n",
+      "  - Exam7: Martes\n",
+      "  - Exam4: Miércoles\n",
+      "\n",
+      "Estudiante Suarino:\n",
+      "  - Exam5: Lunes\n",
+      "  - Exam2: Martes\n",
+      "  - Exam4: Miércoles\n",
+      "\n",
+      "Estudiante Sergio:\n",
+      "  - Exam5: Lunes\n",
+      "  - Exam6: Martes\n",
+      "  - Exam3: Miércoles\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "# Genera una asignación completa aleatoria.\n",
+    "def random_assignment():\n",
+    "    return {exam: random.choice(days) for exam in exams}\n",
+    "\n",
+    "\n",
+    "def local_search(max_iterations=1000):\n",
+    "    current = random_assignment()\n",
+    "\n",
+    "    for _ in range(max_iterations):\n",
+    "        current_conflicts = count_conflicts(current)\n",
+    "        if current_conflicts == 0:\n",
+    "            return current\n",
+    "\n",
+    "        neighbors = []\n",
+    "        # Para cada examen, se prueba cambiar el día por cada opción distinta.\n",
+    "        for exam in exams:\n",
+    "            for day in days:\n",
+    "                if current[exam] != day:\n",
+    "                    neighbor = current.copy()\n",
+    "                    neighbor[exam] = day\n",
+    "                    neighbors.append((count_conflicts(neighbor), neighbor))\n",
+    "\n",
+    "        # Se selecciona el vecino que minimiza los conflictos.\n",
+    "        neighbors.sort(key=lambda x: x[0])\n",
+    "        best_conflict, best_neighbor = neighbors[0]\n",
+    "\n",
+    "        # Si se mejora, se actualiza la solución actual.\n",
+    "        if best_conflict < current_conflicts:\n",
+    "            current = best_neighbor\n",
+    "        else:\n",
+    "            # Si no hay mejora, se selecciona aleatoriamente algún vecino.\n",
+    "            current = random.choice(neighbors)[1]\n",
+    "\n",
+    "    return current  # Puede que no sea solución óptima si se agota el número de iteraciones.\n",
+    "\n",
+    "\n",
+    "interations = 1000\n",
+    "\n",
+    "start_local = time.time()\n",
+    "solucion_local = local_search(max_iterations=interations)\n",
+    "end_local = time.time()\n",
+    "time_local = end_local - start_local\n",
+    "\n",
+    "print(\"Tiempo de ejecución:\", time_local, \"segundos\")\n",
+    "print(\"Solución:\", solucion_local)\n",
+    "valido, mensaje = check_solution(solucion_local)\n",
+    "print(\"Verificación:\", mensaje)\n",
+    "display_student_schedule(solucion_local)"
    ]
   },
   {
