FEAT: add conclusions comparing backtracking, beam search, and local search performance

--- a/Laboratorio08/lab8.ipynb
+++ b/Laboratorio08/lab8.ipynb
@@ -454,6 +454,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conclusiones\n",
+    "\n",
+    "En nuestros experimentos con el problema de programación de exámenes, implementamos tres algoritmos de satisfacción de restricciones: Backtracking, Beam Search y Local Search. Comparando tanto los tiempos de ejecución como las soluciones obtenidas, hemos observado lo siguiente:\n",
+    "\n",
+    "- _Backtracking Search:_\n",
+    "\n",
+    "  - Tardó 0.0010187625885009766 segundos en la ejecución.\n",
+    "  - Esta solución cumple con todas las restricciones, asignando días distintos para cada examen y garantizando que ningún estudiante tenga más de un examen en un mismo día. Este método es completo y, en este caso, mostró un rendimiento muy rápido.\n",
+    "\n",
+    "- _Beam Search:_\n",
+    "\n",
+    "  - Tardó 0.0009999275207519531 segundos en la ejecución\n",
+    "  - Esta solución obtenida mediante Beam Search también cumple con las restricciones. Este enfoque, que limita la búsqueda a las asignaciones parciales más prometedoras, obtuvo un tiempo de ejecución similar al de Backtracking. Aunque en problemas más complejos la elección del ancho del haz y la heurística podrían influir significativamente, en este caso el rendimiento fue excelente.\n",
+    "\n",
+    "- _Local Search:_\n",
+    "  - Tardó 0.003000974655151367 segundos en la ejecución\n",
+    "  - El algoritmo Local Search encontró una solución válida mediante la mejora iterativa de una asignación aleatoria. Su tiempo de ejecución fue ligeramente superior al de los otros métodos, probablemente debido a la exploración de los vecinos en cada iteración, pero sigue siendo muy eficiente para este problema de tamaño reducido.\n",
+    "\n",
+    "Los tres algoritmos lograron encontrar soluciones válidas que cumplen con las restricciones del problema de este laboratorio en tiempos de ejecución muy bajos. Nosotros consideramos que, para este caso en particular, cualquier método es adecuado. Sin embargo, en problemas de mayor tamaño, complejidad o mayor cantidad de estudiantes y exámenes, la elección del algoritmo dependerá de si se prioriza la garantía de completitud (como en Backtracking), la eficiencia en la reducción del espacio de búsqueda (Beam Search) o la rapidez en la mejora iterativa de una solución inicial (Local Search).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Referencias:\n",
     "\n",
     "- GeeksforGeeks. (2024, 12 junio). Explain the Concept of Backtracking Search and Its Role in Finding Solutions to CSPs. GeeksforGeeks. https://www.geeksforgeeks.org/explain-the-concept-of-backtracking-search-and-its-role-in-finding-solutions-to-csps/\n",
