Feat: conclusiones pt2

--- a/Laboratorio08/lab8.ipynb
+++ b/Laboratorio08/lab8.ipynb
@@ -472,7 +472,9 @@
     "  - Tardó 0.003000974655151367 segundos en la ejecución\n",
     "  - El algoritmo Local Search encontró una solución válida mediante la mejora iterativa de una asignación aleatoria. Su tiempo de ejecución fue ligeramente superior al de los otros métodos, probablemente debido a la exploración de los vecinos en cada iteración, pero sigue siendo muy eficiente para este problema de tamaño reducido.\n",
     "\n",
-    "Los tres algoritmos lograron encontrar soluciones válidas que cumplen con las restricciones del problema de este laboratorio en tiempos de ejecución muy bajos. Nosotros consideramos que, para este caso en particular, cualquier método es adecuado. Sin embargo, en problemas de mayor tamaño, complejidad o mayor cantidad de estudiantes y exámenes, la elección del algoritmo dependerá de si se prioriza la garantía de completitud (como en Backtracking), la eficiencia en la reducción del espacio de búsqueda (Beam Search) o la rapidez en la mejora iterativa de una solución inicial (Local Search).\n"
+    "Los tres algoritmos lograron encontrar soluciones válidas que cumplen con las restricciones del problema de este laboratorio en tiempos de ejecución muy bajos. Nosotros consideramos que, para este caso en particular, cualquier método es adecuado. Sin embargo, en problemas de mayor tamaño, complejidad o mayor cantidad de estudiantes y exámenes, la elección del algoritmo dependerá de si se prioriza la garantía de completitud (como en Backtracking), la eficiencia en la reducción del espacio de búsqueda (Beam Search) o la rapidez en la mejora iterativa de una solución inicial (Local Search).\n",
+    "\n",
+    "Los algoritmos tardaron diferentes tiempos por la forma en que exploran las posibles soluciones. Aunque todos fueron rápidos, Local Search fue un poco más lento porque parte de una solución aleatoria y necesita mejorarla paso a paso evaluando múltiples vecinos en cada iteración. En cambio, Backtracking y Beam Search fueron más directos, Backtracking explora de forma sistemática y completa, mientras que Beam Search reduce el espacio de búsqueda concentrándose en las mejores opciones."
    ]
   },
   {
