--- a/Laboratorio08/lab8.ipynb
+++ b/Laboratorio08/lab8.ipynb
@@ -84,17 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "\n",
-    "# Definición de variables y dominios\n",
+    "# Definición de variables \n",
     "exams = [\"Exam1\", \"Exam2\", \"Exam3\", \"Exam4\", \"Exam5\", \"Exam6\", \"Exam7\"]\n",
     "days = [\"Lunes\", \"Martes\", \"Miércoles\"]\n",
     "\n",
-    "# Definición de los estudiantes inscritos en cada examen.\n",
+    "# estudiantes inscritos en cada examen\n",
     "enrollment = {\n",
     "    \"Exam1\": [\"Rodri\", \"Andre\"],\n",
     "    \"Exam2\": [\"Rodri\", \"Suarino\"],\n",
@@ -106,27 +106,27 @@
     "}\n",
     "\n",
     "\n",
-    "# Función para contar conflictos en una asignación completa\n",
+    "# funcion que encuentra los conflictos\n",
     "def count_conflicts(assignment):\n",
     "    conflicts = 0\n",
-    "    # Se comparan pares de exámenes\n",
+    "    # Se comparan pares de examnes\n",
     "    for i in range(len(exams)):\n",
     "        for j in range(i + 1, len(exams)):\n",
     "            exam1 = exams[i]\n",
     "            exam2 = exams[j]\n",
     "            if exam1 in assignment and exam2 in assignment:\n",
     "                if assignment[exam1] == assignment[exam2]:\n",
-    "                    # Si comparten estudiante y están en el mismo día, hay conflicto.\n",
+    "                    # Si comparten estudiante y estan en el mismo dia hay conflicto\n",
     "                    if set(enrollment[exam1]).intersection(enrollment[exam2]):\n",
     "                        conflicts += 1\n",
     "    return conflicts\n",
     "\n",
     "\n",
-    "# Función para verificar si agregar (exam, day) es consistente con la asignación actual.\n",
+    "# funcion que verifica si agregar exam, day es consistente con la asignacion actual\n",
     "def is_consistent(assignment, exam, day):\n",
     "    for other_exam, assigned_day in assignment.items():\n",
     "        if assigned_day == day:\n",
-    "            # Si exam y otro examen comparten estudiante, no pueden ser el mismo día.\n",
+    "            # Si 2 exam comparten estudiante, no pueden ser el mismo dia\n",
     "            if set(enrollment[exam]).intersection(enrollment[other_exam]):\n",
     "                return False\n",
     "    return True"
@@ -141,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_solution(assignment):\n",
-    "    # Verifica que cada examen esté asignado a un día válido.\n",
+    "    # se verifica que cada examene este asignado a un dia valido\n",
     "    for exam, day in assignment.items():\n",
     "        if day not in days:\n",
     "            return False, f\"El examen {exam} se asignó a un día inválido: {day}\"\n",
     "\n",
-    "    # Para cada estudiante, se construye su horario y se verifica que no tenga más de un examen por día.\n",
+    "    # Para cada estudiante, se construye su horario y se verifica que no tenga mas de un examen por dia\n",
     "    student_schedule = {}\n",
     "    for exam, day in assignment.items():\n",
     "        for student in enrollment[exam]:\n",
@@ -174,7 +174,7 @@
     "\n",
     "\n",
     "def display_student_schedule(assignment):\n",
-    "    # Se construye un diccionario que mapea cada estudiante a sus (examen, día)\n",
+    "    # Se construye un diccionario que mapea cada estudiante \n",
     "    student_schedule = {}\n",
     "    for exam, day in assignment.items():\n",
     "        for student in enrollment[exam]:\n",
@@ -184,7 +184,6 @@
     "    print(\"Horarios de exámenes por estudiante:\")\n",
     "    for student, exam_days in student_schedule.items():\n",
     "        print(f\"Estudiante {student}:\")\n",
-    "        # Se puede ordenar por día si se desea, utilizando un orden definido.\n",
     "        day_order = {\"Lunes\": 1, \"Martes\": 2, \"Miércoles\": 3}\n",
     "        exam_days.sort(key=lambda x: day_order[x[1]])\n",
     "        for exam, day in exam_days:\n",
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,11 +236,11 @@
    ],
    "source": [
     "def backtracking_search(assignment={}):\n",
-    "    # Caso base: asignación completa\n",
+    "    # asigancion completa como caso base\n",
     "    if len(assignment) == len(exams):\n",
     "        return assignment\n",
     "\n",
-    "    # Seleccionar la siguiente variable (examen) sin asignar.\n",
+    "    # se selecciona la siguiente variable sin asignar\n",
     "    unassigned = [exam for exam in exams if exam not in assignment]\n",
     "    exam = unassigned[0]\n",
     "\n",
@@ -251,11 +250,11 @@
     "            result = backtracking_search(assignment)\n",
     "            if result is not None:\n",
     "                return result\n",
-    "            # Si no se encontró solución, se deshace la asignación.\n",
+    "            # Si no se encontro solución se deshace la asignacion\n",
     "            del assignment[exam]\n",
     "    return None\n",
     "\n",
-    "\n",
+    "# saca los tiempos\n",
     "start_bt = time.time()\n",
     "solucion_bt = backtracking_search()\n",
     "end_bt = time.time()\n",
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -313,17 +312,17 @@
    ],
    "source": [
     "def beam_search(beam_width=3):\n",
-    "    # Estado inicial: asignación vacía\n",
+    "    # asignación vacia inicialmente\n",
     "    beam = [{}]\n",
     "\n",
     "    while beam:\n",
     "        new_beam = []\n",
     "        for assignment in beam:\n",
-    "            # Si la asignación es completa y sin conflictos, se retorna la solución.\n",
+    "            # Si la asignación es completa y sin conflictos se devuelve la solucion\n",
     "            if len(assignment) == len(exams) and count_conflicts(assignment) == 0:\n",
     "                return assignment\n",
     "\n",
-    "            # Seleccionar el siguiente examen a asignar.\n",
+    "            # Seleccionar el siguiente examen a asignar\n",
     "            unassigned = [exam for exam in exams if exam not in assignment]\n",
     "            if not unassigned:\n",
     "                continue\n",
@@ -331,11 +330,11 @@
     "            for day in days:\n",
     "                new_assignment = assignment.copy()\n",
     "                new_assignment[next_exam] = day\n",
-    "                # Se evalúa la heurística la cual es el número de conflictos.\n",
+    "                # se evalua la heuristica\n",
     "                conflicts = count_conflicts(new_assignment)\n",
     "                new_beam.append((conflicts, new_assignment))\n",
     "\n",
-    "        # Se ordenan las asignaciones parciales por menor número de conflictos y se retienen las mejores.\n",
+    "        # se ordenan las asignacions por el num de conflictos y se agarran las mejores\n",
     "        new_beam.sort(key=lambda x: x[0])\n",
     "        beam = [assignment for conflicts, assignment in new_beam[:beam_width]]\n",
     "    return None\n",
@@ -400,7 +399,7 @@
     "import random\n",
     "\n",
     "\n",
-    "# Genera una asignación completa aleatoria.\n",
+    "# Genera una asigancion aleatoria\n",
     "def random_assignment():\n",
     "    return {exam: random.choice(days) for exam in exams}\n",
     "\n",
@@ -414,7 +413,7 @@
     "            return current\n",
     "\n",
     "        neighbors = []\n",
-    "        # Para cada examen, se prueba cambiar el día por cada opción distinta.\n",
+    "        # Para cada examen se prueba cambiar el dia por cada opcsion distidiferente \n",
     "        for exam in exams:\n",
     "            for day in days:\n",
     "                if current[exam] != day:\n",
@@ -422,18 +421,18 @@
     "                    neighbor[exam] = day\n",
     "                    neighbors.append((count_conflicts(neighbor), neighbor))\n",
     "\n",
-    "        # Se selecciona el vecino que minimiza los conflictos.\n",
+    "        # Se selecciona el vecino que minimiza los conflictos\n",
     "        neighbors.sort(key=lambda x: x[0])\n",
     "        best_conflict, best_neighbor = neighbors[0]\n",
     "\n",
-    "        # Si se mejora, se actualiza la solución actual.\n",
+    "        # Si se mejora, se actualiza la solución actual\n",
     "        if best_conflict < current_conflicts:\n",
     "            current = best_neighbor\n",
     "        else:\n",
-    "            # Si no hay mejora, se selecciona aleatoriamente algún vecino.\n",
+    "            # Si no hay mejora, se selecciona aleatoriamente un vecino\n",
     "            current = random.choice(neighbors)[1]\n",
     "\n",
-    "    return current  # Puede que no sea solución óptima si se agota el número de iteraciones.\n",
+    "    return current  \n",
     "\n",
     "\n",
     "interations = 1000\n",
